package com.obelisk;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class ObeliskApplication {
    public static void main(String[] args) {
        SpringApplication.run(ObeliskApplication.class, args);
    }
}
